--- a/index.html
+++ b/index.html
@@ -9,31 +9,80 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.20.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.5.1/dist/tfjs-vis.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <style>
-    :root { --p:#6b46c1; --g:#f6f7fb; --b:#111827; --bd:#e5e7eb; }
-    *{ box-sizing:border-box }
-    body{ margin:0; font:16px/1.5 Inter,system-ui,Segoe UI,Roboto,Arial; color:var(--b); background:#fff }
-    .container{ max-width:1200px; margin:0 auto; padding:24px }
-    h1{ color:var(--p); margin:0 0 16px }
-    h2{ color:var(--p); margin:0 0 12px; font-size:20px }
-    section{ background:var(--g); border:1px solid var(--bd); border-radius:14px; padding:18px; margin:16px 0 }
-    .row{ display:grid; grid-template-columns:1fr 1fr; gap:16px }
-    .row-3{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:16px }
-    .btn{ background:var(--p); color:#fff; border:none; padding:10px 14px; border-radius:10px; cursor:pointer }
-    .btn:disabled{ opacity:.45; cursor:not-allowed }
-    label{ display:block; font-weight:600; margin-bottom:6px }
-    input[type=file]{ display:block; padding:8px; background:#fff; border:1px solid var(--bd); border-radius:10px; width:100% }
-    table{ border-collapse:collapse; width:100%; background:#fff; border-radius:10px; overflow:hidden }
-    th,td{ border:1px solid var(--bd); padding:8px; text-align:left }
-    th{ background:#f3f4f6 }
-    .card{ background:#fff; border:1px solid var(--bd); border-radius:12px; padding:12px }
-    .metrics{ display:grid; grid-template-columns:repeat(3,1fr); gap:12px }
-    .note{ background:#fff; border-left:4px solid var(--p); padding:12px; border-radius:10px; }
-    .pill{ display:inline-block; background:#ede9fe; color:#4c1d95; padding:4px 8px; border-radius:999px; font-size:12px; margin-right:6px }
-    .flex{ display:flex; gap:10px; flex-wrap:wrap }
-    @media (max-width:900px){ .row, .row-3, .metrics{ grid-template-columns:1fr } }
-  </style>
+
+ <style>
+  /* ===== Theme tokens ===== */
+  :root{
+    --bg:#ffffff; --fg:#0f172a; --muted:#475569;
+    --card:#f7f7fb; --border:#e5e7eb;
+    --brand:#6b4de6; --brand-2:#8a6df1;
+    --ring:0 0 0 3px rgba(107,77,230,.15);
+  }
+  body.dark{
+    --bg:#0b1020; --fg:#e6e8ee; --muted:#97a1b3;
+    --card:#121833; --border:#1f2649;
+    --brand:#8a6df1; --brand-2:#b39cf9;
+    --ring:0 0 0 3px rgba(179,156,249,.16);
+  }
+
+  *{box-sizing:border-box}
+  body{margin:0;background:var(--bg);color:var(--fg);
+    font:16px/1.55 Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,Arial}
+  .container{max-width:1100px;margin:0 auto;padding:28px 20px 80px}
+
+  h1{margin:0 0 6px;font-weight:800;letter-spacing:-.02em}
+  h1 .sub{display:block;font-weight:500;font-size:14px;color:var(--muted)}
+  h2{margin:0 0 12px;font-size:20px}
+  p{margin:10px 0;color:var(--muted)}
+
+  /* Sticky top bar */
+  .topnav{position:sticky;top:0;z-index:50;backdrop-filter:blur(8px);
+    background:color-mix(in oklab, var(--bg) 80%, transparent);
+    border-bottom:1px solid var(--border)}
+  .topnav .inner{max-width:1100px;margin:0 auto;padding:10px 20px;
+    display:flex;gap:14px;align-items:center;justify-content:space-between}
+  .brand{display:flex;align-items:center;gap:10px;font-weight:800}
+  .brand .dot{width:10px;height:10px;border-radius:999px;
+    background:linear-gradient(135deg,var(--brand),var(--brand-2));box-shadow:0 0 0 3px rgba(107,77,230,.18)}
+  .tabs{display:flex;gap:8px;flex-wrap:wrap}
+  .tab{padding:8px 12px;border:1px solid var(--border);border-radius:999px;
+    background:var(--bg);color:var(--muted);text-decoration:none;font-size:14px}
+  .tab:hover{border-color:var(--brand);color:var(--fg)}
+
+  /* Layout + cards */
+  section{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:18px;margin:16px 0}
+  .row{display:grid;grid-template-columns:1fr 1fr;gap:16px}
+  .row-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
+  .card{background:var(--bg);border:1px solid var(--border);border-radius:14px;padding:14px}
+  .note{background:var(--bg);border-left:4px solid var(--brand);border-radius:12px;padding:12px}
+
+  .btn{background:linear-gradient(135deg,var(--brand),var(--brand-2));color:#fff;border:none;
+    padding:10px 14px;border-radius:12px;cursor:pointer;box-shadow:0 6px 18px rgba(107,77,230,.18);transition:.2s}
+  .btn:hover{transform:translateY(-1px)}
+  .btn:disabled{opacity:.5;cursor:not-allowed;box-shadow:none}
+
+  label{display:block;font-weight:600;margin-bottom:6px}
+  input[type=file], select{width:100%;background:var(--bg);color:var(--fg);border:1px solid var(--border);
+    border-radius:12px;padding:10px;outline:none;transition:border-color .15s}
+  input[type=file]:focus, select:focus{border-color:var(--brand);box-shadow:var(--ring)}
+
+  table{width:100%;border-collapse:collapse;background:var(--bg);border-radius:12px;overflow:hidden}
+  th,td{padding:10px 12px;border-bottom:1px solid var(--border);text-align:left}
+  th{background:color-mix(in oklab, var(--bg) 92%, var(--brand) 8%);font-weight:700}
+  tr:hover td{background:color-mix(in oklab, var(--bg) 95%, var(--brand) 5%)}
+
+  .metrics{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
+  .kpi{font-size:28px;font-weight:800}
+
+  /* tfjs-vis panel: тень и граница; цвета берём из темы */
+  tf-vis-panel{background:var(--bg)!important;color:var(--fg)!important;
+    box-shadow:0 10px 40px rgba(0,0,0,.22);border-left:1px solid var(--border)}
+
+  @media (max-width:980px){.row,.row-3,.metrics{grid-template-columns:1fr}}
+</style>
+
 </head>
 <body>
   <div class="container">
@@ -52,7 +101,7 @@
     </div>
 
     <!-- 1. Data -->
-    <section>
+    <section id="data">
       <h2>1) Data</h2>
       <div class="row">
         <div>
@@ -71,10 +120,30 @@
       </div>
       <div id="preview"></div>
       <div id="eda"></div>
+      
+      <div class="row">
+  <div class="card">
+    <h3>Quality distribution</h3>
+    <canvas id="eda-quality" height="220"></canvas>
+  </div>
+  <div class="card">
+    <h3>Wine categories</h3>
+    <canvas id="eda-winecat" height="220"></canvas>
+  </div>
+  <div class="card">
+    <h3>Food categories</h3>
+    <canvas id="eda-foodcat" height="220"></canvas>
+  </div>
+  <div class="card">
+    <h3>Cuisines</h3>
+    <canvas id="eda-cuisines" height="220"></canvas>
+  </div>
+</div>
+
     </section>
 
     <!-- 2. Model -->
-    <section>
+    <section id="model">
       <h2>2) Modeling</h2>
       <div class="row">
         <div class="card">
@@ -115,7 +184,7 @@
     </section>
 
     <!-- 3. Prototype -->
-    <section>
+    <section id="app">
       <h2>3) Application Prototype: Interactive Recommendation</h2>
       <div class="row">
         <div class="card">
@@ -165,7 +234,7 @@
     </section>
 
     <!-- 4. Export / Deploy -->
-    <section>
+    <section id="deploy">
       <h2>4) Export & Deploy</h2>
       <div class="flex">
         <button class="btn" id="btn-export" disabled>Export Model (.json + .bin)</button>
@@ -245,7 +314,38 @@ window.addEventListener('load', () => {
     });
   }, 500);
 });
+
+<script>
+  // smooth-scroll по табам
+  document.querySelectorAll('.tab[href^="#"]').forEach(a=>{
+    a.addEventListener('click', e=>{
+      e.preventDefault();
+      const el = document.querySelector(a.getAttribute('href'));
+      el?.scrollIntoView({behavior:'smooth', block:'start'});
+    });
+  });
+  // dark mode toggle + сохранение
+  const KEY='wf-dark', body=document.body, t=document.getElementById('theme-toggle');
+  if(localStorage.getItem(KEY)==='1'){ body.classList.add('dark'); t.textContent='Light'; }
+  t?.addEventListener('click', ()=>{
+    const dark = body.classList.toggle('dark');
+    t.textContent = dark ? 'Light' : 'Dark';
+    localStorage.setItem(KEY, dark ? '1' : '0');
+  });
 </script>
 
 </body>
+  <div class="topnav">
+  <div class="inner">
+    <div class="brand"><span class="dot"></span> Wine & Food Pairing</div>
+    <div class="tabs">
+      <a class="tab" href="#data">Data</a>
+      <a class="tab" href="#model">Model</a>
+      <a class="tab" href="#app">Prototype</a>
+      <a class="tab" href="#deploy">Export</a>
+      <button id="theme-toggle" class="tab" style="cursor:pointer">Dark</button>
+    </div>
+  </div>
+</div>
+
 </html>
