--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@ window.addEventListener('load', () => {
     });
   }, 500);
 });
-
+</script>
+  
 <script>
   // smooth-scroll по табам
   document.querySelectorAll('.tab[href^="#"]').forEach(a=>{
