--- a/index.html
+++ b/index.html
@@ -122,22 +122,41 @@
   max-height: 260px;
 }
    /* --- EDA tables span full width and are responsive --- */
-#eda .eda-tables{
-  /* растянуть на обе колонки родительской сетки #eda */
-  grid-column: 1 / -1;
-  /* внутри — адаптивные колонки: от 260px и шире */
+/* ===== EDA tables: full width & responsive ===== */
+
+/* сам контейнер секции с графиками — 2 колонки, как и было */
+#eda{
+  display:grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap:16px;
+}
+
+/* чтобы карточки-графики могли сжиматься корректно */
+#eda > * { min-width: 0; }
+
+/* БЛОК ТАБЛИЦ: растягиваем на обе колонки секции #eda */
+#eda > .eda-tables{
+  grid-column: 1 / -1;        /* <-- ключ! занять обе колонки */
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-template-columns: repeat(3, minmax(260px, 1fr));  /* 3 столбца на десктопе */
   gap: 16px;
 }
 
-/* чуть компактнее карточки с таблицами */
-#eda .eda-tables .card { padding: 12px; }
+/* адаптив: 2 столбца и затем 1 */
+@media (max-width: 1100px){
+  #eda > .eda-tables{ grid-template-columns: repeat(2, minmax(260px,1fr)); }
+}
+@media (max-width: 720px){
+  #eda > .eda-tables{ grid-template-columns: 1fr; }
+}
 
-/* фикс верстки таблиц: фиксированный layout + перенос слов */
-#eda .eda-tables table{ table-layout: fixed; }
-#eda .eda-tables th,
-#eda .eda-tables td{
+/* немного компактнее карточки-таблицы */
+#eda .eda-tables .card{ padding:12px; }
+
+/* таблицы не «рвутся», текст переносится, ширина 100% */
+#eda .eda-tables table{ table-layout: fixed; width:100%; }
+#eda .eda-tables th, #eda .eda-tables td{
   word-break: break-word;
   white-space: normal;
 }
