--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <button class="btn" id="btn-export" disabled>Export Model (.json + .bin)</button>
       </div>
       <!--
-      <div class="note" style="margin-top:10px">
+      <div class="note" style="margin-top:10px" hidden>
         <ol style="margin:0 0 0 18px">
           <li>Commit <code>index.html</code>, <code>app.js</code>, and optionally <code>wine_food_pairings.csv</code> to a public repo</li>
           <li>Enable GitHub Pages → Branch: <b>main</b> → Folder: <b>/root</b></li>
@@ -368,7 +368,7 @@
             <button class="btn" id="btn-export-vocabs">Export vocabs.json</button>
           </div>
           <!--
-          <div class="card">
+          <div class="card" hidden>
             <h4 style="margin:0 0 6px">How to deploy</h4>
             <ol style="margin:0 0 0 18px">
               <li>Run Preprocess → Train → Evaluate (once on your machine)</li>
